# Same51

./: .gitignore  CMakeLists.txt  package.json  readme.md
meta/: CMakeLists.txt  toolchain-gcc.cmake
source/: board.h  main.cpp  same51j19a_flash.ld
source/startup/: cortex_handlers.c  startup.cpp  syscalls.cpp  system_samd51.h
